[gd_scene load_steps=7 format=3 uid="uid://bgw1k8h8n4fcf"]

[ext_resource type="Script" path="res://main.gd" id="1_kduvf"]
[ext_resource type="Theme" uid="uid://c6bseq8augqts" path="res://assets/themes/main_theme.tres" id="1_w82no"]
[ext_resource type="AudioStream" uid="uid://u1y2du7o84ff" path="res://assets/audio/timer.ogg" id="2_5x3ma"]
[ext_resource type="PackedScene" uid="uid://dkmxba4m116al" path="res://scenes/settings.tscn" id="3_2y8qi"]
[ext_resource type="PackedScene" uid="uid://c2hue7smsng4d" path="res://scenes/message_label.tscn" id="3_ndsah"]

[sub_resource type="ButtonGroup" id="ButtonGroup_sj623"]
resource_name = "Timer Type"

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w82no")
script = ExtResource("1_kduvf")
metadata/_edit_lock_ = true

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Tabs" type="TabContainer" parent="Background"]
layout_mode = 2

[node name="Interface" type="MarginContainer" parent="Background/Tabs"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Tabs/Interface"]
layout_mode = 2

[node name="TimerTypes" type="VBoxContainer" parent="Background/Tabs/Interface/VBoxContainer"]
layout_mode = 2

[node name="Type_Work" type="CheckButton" parent="Background/Tabs/Interface/VBoxContainer/TimerTypes" groups=["buttons", "options"]]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_sj623")
text = "Work"

[node name="Type_Short" type="CheckButton" parent="Background/Tabs/Interface/VBoxContainer/TimerTypes" groups=["buttons", "options"]]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_sj623")
text = "Short Break"

[node name="Type_Long" type="CheckButton" parent="Background/Tabs/Interface/VBoxContainer/TimerTypes" groups=["buttons", "options"]]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_sj623")
text = "Long Break"

[node name="StartTimer" type="Button" parent="Background/Tabs/Interface/VBoxContainer" groups=["buttons"]]
layout_mode = 2
text = "Start Timer"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Tabs/Interface/VBoxContainer"]
layout_mode = 2

[node name="PauseTimer" type="Button" parent="Background/Tabs/Interface/VBoxContainer/HBoxContainer" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause"

[node name="StopTimer" type="Button" parent="Background/Tabs/Interface/VBoxContainer/HBoxContainer" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="TimerLabel" type="RichTextLabel" parent="Background/Tabs/Interface/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "[center]--:--[/center]"
fit_content = true
shortcut_keys_enabled = false

[node name="WorkCounter" type="Label" parent="Background/Tabs/Interface/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "..."
horizontal_alignment = 1

[node name="Status" parent="Background/Tabs/Interface/VBoxContainer" instance=ExtResource("3_ndsah")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="Settings" parent="Background/Tabs" instance=ExtResource("3_2y8qi")]
visible = false
layout_mode = 2

[node name="WorkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1500.0
one_shot = true

[node name="BreakTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 300.0
one_shot = true

[node name="BreakTimerLong" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 900.0
one_shot = true

[node name="Alarm" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_5x3ma")
volume_db = -16.0

[connection signal="toggled" from="Background/Tabs/Interface/VBoxContainer/TimerTypes/Type_Work" to="." method="_on_timer_type_changed" binds= ["work"]]
[connection signal="toggled" from="Background/Tabs/Interface/VBoxContainer/TimerTypes/Type_Short" to="." method="_on_timer_type_changed" binds= ["short"]]
[connection signal="toggled" from="Background/Tabs/Interface/VBoxContainer/TimerTypes/Type_Long" to="." method="_on_timer_type_changed" binds= ["long"]]
[connection signal="pressed" from="Background/Tabs/Interface/VBoxContainer/StartTimer" to="." method="_on_start_timer_pressed"]
[connection signal="pressed" from="Background/Tabs/Interface/VBoxContainer/HBoxContainer/PauseTimer" to="." method="_on_pause_timer_pressed"]
[connection signal="pressed" from="Background/Tabs/Interface/VBoxContainer/HBoxContainer/StopTimer" to="." method="_on_stop_timer_pressed"]
